# raytracing

./: .gitignore  CMakeLists.txt
includes/log/: log.hpp
scripts/: build.sh  run.sh
src/: main.cpp
tests/: CMakeLists.txt
